--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <!-- <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane> -->
           <!-- <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="2 2 2" animation-mixer src="#avatarModel"> -->
             <!-- <a-plane scale="0.5 0.5 0.5" position="0 0 0" rotation="0 0 0" width="5" height="5" canvas-material="width:512; height:512" canvas-text="text:我们会找到解决方案; font: 50px serif; fillStyle: #006064"></a-plane> -->
-            <a-troika-text font="./SawarabiMincho.ttf" value="修正しました"></a-troika-text>
+            <a-troika-text font="./CutiveMono.ttf" value="Hello world"></a-troika-text>
           </a-entity>
       </a-scene>
     </body>
