remote js added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <script src="https://cdn.rawgit.com/richardanaya/aframe-canvas/master/index.js"></script>
       <script src="https://ejeinc.github.io/aframe-canvas-text/canvas-text.js"></script>
 
+      <script data-consolejs-channel="6cd027e4-9e66-cffc-22bb-8f4f96060448" src="https://remotejs.com/agent/agent.js"></script>
+
     </head>
     <body>
       <a-scene mindar-image="imageTargetSrc: https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/trensertest/webar-demo/main/track/IMG_3013.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
