--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- <a-plane scale="0.5 0.5 0.5" position="0 0 0" rotation="0 0 0" width="5" height="5" canvas-material="width:512; height:512" canvas-text="text:我们会找到解决方案; font: 50px serif; fillStyle: #006064"></a-plane> -->
             <!-- <a-troika-text color="red" font="./CutiveMono.ttf" value="Hello world"></a-troika-text> -->
             <a-entity troika-text="value: Hello world!"></a-entity>
-            <a-text position="0 -0.5 0" value="hello " ></a-text>
+            <a-text negate="false" font="./CutiveMono/CutiveMono-msdf.json" position="0 -0.5 0" value="hello there" ></a-text>
           </a-entity>
       </a-scene>
 
