rockwell font added

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <!-- <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane> -->
           <!-- <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="2 2 2" animation-mixer src="#avatarModel"> -->
             <!-- <a-plane scale="0.5 0.5 0.5" position="0 0 0" rotation="0 0 0" width="5" height="5" canvas-material="width:512; height:512" canvas-text="text:我们会找到解决方案; font: 50px serif; fillStyle: #006064"></a-plane> -->
-            <!-- <a-troika-text color="red" font="./CutiveMono.ttf" value="Hello world"></a-troika-text> -->
-            <a-entity troika-text="value: Hello world!"></a-entity>
+            <a-troika-text color="red" font="./Rockwell.TTF" value="Hello world"></a-troika-text>
+            <!-- <a-entity troika-text="value: Hello world!"></a-entity> -->
             <a-text negate="false" font="./CutiveMono/CutiveMono-msdf.json" position="0 -0.5 0" value="hello there" ></a-text>
           </a-entity>
       </a-scene>
